#1093: Error exportant TE. No es validen les variables de la DP igual que les del TE
Task-Url: https://github.com/GovernIB/helium/issues/issues/1093

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -409,6 +409,12 @@ exportar.validacio.definicio.variable.enumeracio.entorn=La variable de tipus sel
 exportar.validacio.definicio.variable.enumeracio.tipexp=La variable de tipus selecció "{0}" necessita l''''enumeració "{1}" a nivell de tipus d''''expedient
 exportar.validacio.definicio.document=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}"
 exportar.validacio.definicio.firma=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}" per una signatura
+exportar.validacio.definicio.variable.seleccio.enumeracio.tipexp=La variable de tipus selecció "{0}" de la definició de procés "{1}" necessita l''''enumeració "{2}" a nivell de tipus d''''expedient
+exportar.validacio.definicio.variable.seleccio.domini.tipexp=La variable de tipus selecció "{0}" de la definició de procés "{1}" necessita el domini "{2}" a nivell de tipus d''''expedient
+exportar.validacio.definicio.tasca.variable.tipexp=La tasca "{0}" de la definició de procés "{1}" necessita la variable "{2}" a nivell de tipus d''''expedient
+exportar.validacio.definicio.tasca.document.tipexp=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}" a nivell de tipus d''''expedient
+exportar.validacio.definicio.tasca.signatura.tipexp=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}" per a la signatura a nivell de tipus d''''expedient
+
 
 
 expedient.tipus.importar.form.titol.nou=Importació d'un nou tipus d'expedient
