#1082 Generació de les metadades NTI
https://github.com/GovernIB/helium/issues/1082

Conflicts:
	helium-core/src/main/java/net/conselldemallorca/helium/v3/core/service/ExpedientDocumentServiceImpl.java

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -277,6 +277,7 @@ expedient.tipus.pipelles.pipella.accions=Accions
 expedient.tipus.pipelles.pipella.dominis=Dominis
 expedient.tipus.pipelles.pipella.redireccions=Redireccions
 expedient.tipus.pipelles.pipella.consultes=Consultes
+expedient.tipus.pipelles.pipella.metadades.nti=Metadades Nti
 
 expedient.tipus.info.camp.codi=Codi
 expedient.tipus.info.camp.titol=Títol
@@ -633,6 +634,7 @@ expedient.tipus.document.form.camp.tipus_doc=Tipus de document
 expedient.tipus.document.form.camp.tipus_doc.comment=Codi del document pel portasignatures
 expedient.tipus.document.form.camp.ignored=No retrocedir valor
 expedient.tipus.document.form.camp.ignored.comment=No esborrar el document en cas de retrocedir l'expedient
+expedient.tipus.document.form.camp.tipus.documental=Tipus documental
 
 #expedient.tipus.document.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.document.controller.creat=El document s'ha creat correctament
@@ -853,6 +855,47 @@ expedient.tipus.integracio.notificacio.avisText=Text d'avís
 expedient.tipus.integracio.notificacio.avisSmsText=Text SMS d'avís
 expedient.tipus.integracio.notificacio.oficiTitol=Títol de l'ofici
 expedient.tipus.integracio.notificacio.oficiText=Text de l'ofici
+
+
+expedient.tipus.metadades.nti.activar=Activar
+expedient.tipus.metadades.nti.organisme=Codi DIR3 del organisme associat
+expedient.tipus.metadades.nti.classificacio=Codi SIA del procediment associat
+expedient.tipus.metadades.nti.tipus.firma=Tipus de firma
+expedient.tipus.metadades.nti.valor.csv=Valor de CSV
+expedient.tipus.metadades.nti.definicio.generacio.csv=Definició de generació de CSV
+
+expedient.tipus.tipus.metadades.nti.controller.guardat=Els canvis s'han guardat correctament
+
+expedient.tipus.metadades.nti.titol=Metadades Nti
+
+expedient.metadades.nti.versio=Versió del NTI
+expedient.metadades.nti.identificador=Identificador Nti
+expedient.metadades.nti.data.apertura=Data apertura
+expedient.metadades.nti.classificacio=Codi SIA del procediment associat
+expedient.metadades.nti.estat=Estat de l'expedient
+expedient.metadades.nti.estat.inicialitzat=Inicialitzat
+expedient.metadades.nti.estat.finalitzat=Finalitzat
+expedient.metadades.nti.interesat=Interesat
+expedient.metadades.nti.tipus.firma=Tipus de firma
+expedient.metadades.nti.valor.csv=Valor de CSV
+expedient.metadades.nti.definicio.generacio.csv=Definició de generació de CSV
+
+
+document.metadades.nti.versio=Versió del NTI
+document.metadades.nti.identificador=Identificador Nti
+document.metadades.nti.organisme=Organisme
+document.metadades.nti.origen=Origen
+document.metadades.nti.estat.elaboracio=Elaboració
+document.metadades.nti.nom.format=Format
+document.metadades.nti.tipus.documental=Tipus documental
+document.metadades.nti.data.captura=Data de captura
+document.metadades.nti.tipus.firma=Tipus de firma
+document.metadades.nti.valor.csv=Valor de CSV
+document.metadades.nti.definicio.generacio.csv=Definició de generació de CSV
+document.metadades.nti.identificador.doc.origen=Identificador Nti del document d'origen
+
+
+expedient.metadades.nti.organisme=Codi DIR3 del organisme associat
 
 
 expedient.tipus.integracio.tramits.controller.guardat=Els canvis s'han guardat correctament
@@ -1403,6 +1446,36 @@ document.controller.firma.passarela.final.error=La firma del document ha produit
 document.controller.firma.passarela.final.error.validacio=La firma del document ha produit un error al validar i custodiar: 
 document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
 document.controller.firma.passarela.final.desconegut=La firma del document ha finalitzat amb estat desconegut
+
+tipus.documental.RESOLUCIO=Resolució
+tipus.documental.ACORD=Acord
+tipus.documental.CONTRACTE=Contracte
+tipus.documental.CONVENI=Conveni
+tipus.documental.DECLARACIO=Declaració
+tipus.documental.COMUNICACIO=Comunicació
+tipus.documental.NOTIFICACIO=Notificació
+tipus.documental.PUBLICACIO=Publicació
+tipus.documental.JUSTIFICANT_REBUT=Justificant del rebut
+tipus.documental.ACTA=Acta
+tipus.documental.CERTIFICAT=Certificat
+tipus.documental.DILIGENCIA=Diligencia
+tipus.documental.INFORME=Informe
+tipus.documental.SOLICITUD=Sol·licitud
+tipus.documental.DENUNCIA=Denuncia
+tipus.documental.ALEGACIO=Al·legació
+
+tipo.firma.CSV=CSV (Codi segur de verificació)
+tipo.firma.XAdES_ids=XAdES Internally Detached Signature
+tipo.firma.XAdES_es=XAdES Enveloped Signature
+tipo.firma.CAdES_des=CAdES Detached/Explicit Signature
+tipo.firma.CAdES_ais=CAdES Attached/Implicit Signature
+tipo.firma.PAdES=PAdES
+tipo.firma.XAdES_1506d=XAdES (Decision 1506) Detached
+tipo.firma.XAdES_1506e=XAdES (Decision 1506) Enveloped
+tipo.firma.CAdES_1506d=CAdES (Decision 1506) Detached
+tipo.firma.CAdES_1506a=CAdES (Decision 1506) Attached
+tipo.firma.PAdES_1506=PAdES (Decision 1506)
+
 #############################################################
 # MISSATGES D'ERROR
 #############################################################
