#1117: El TE queda sense DP inicial després d'esborrar versió
Task-Url: https://github.com/GovernIB/helium/issues/1117

Modificació per conservar la definició de procés inicial, per propagar
consultes a versions anteriors i ver avisar si s'ha esborrat una versió
de definició de procés amb camps relacionats.

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1027,6 +1027,7 @@ expedient.tipus.consulta.params.controller.eliminar.error=S'ha produït un error 
 definicio.proces.delete.success=La definició de procés {0} v.{1} s'ha esborrat correctament
 definicio.proces.delete.error=Error esborrant la definició de procés : {0}
 definicio.proces.delete.error.processos=La definició de procés {0} v.{1} no es pot esborrar perquè té {2} expedients relacionats
+definicio.proces.delete.avis.consultes=La consulta "{0}-{1}" del tipus d''expedient té camps relacionats amb la versió a esborrar. Podeu propagar les consultes del tipus d''expedient per apuntar a la darrera versió.
 
 definicio.proces.llistat.titol=Definicions de procés
 definicio.proces.llistat.columna.jbpmKey=Codi
