#1126: Rectificar metadades NTI
Conflicts:
	helium-core/src/main/java/net/conselldemallorca/helium/v3/core/service/ExpedientDocumentServiceImpl.java

Task-Url: https://github.com/GovernIB/helium/issues/1126

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -117,6 +117,9 @@ expedient.document.registrat=Document registrat (clic per veure detalls)
 expedient.document.adjuntat=Adjuntat 
 expedient.document.data=Data 
 
+expedient.document.pipella.general=General
+expedient.document.pipella.nti=NTI
+
 expedient.tramitacio.massiva=Tramitació massiva
 expedient.tramitacio.massiva.header.nom=Nom tramitació
 expedient.tramitacio.massiva.header.execucio=Execució
@@ -635,6 +638,7 @@ expedient.tipus.document.form.camp.tipus_doc.comment=Codi del document pel porta
 expedient.tipus.document.form.camp.ignored=No retrocedir valor
 expedient.tipus.document.form.camp.ignored.comment=No esborrar el document en cas de retrocedir l'expedient
 expedient.tipus.document.form.camp.tipus.documental=Tipus documental
+expedient.tipus.document.form.legend.metadades.nti=Metadades NTI
 
 #expedient.tipus.document.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.document.controller.creat=El document s'ha creat correctament
@@ -892,7 +896,7 @@ document.metadades.nti.data.captura=Data de captura
 document.metadades.nti.tipus.firma=Tipus de firma
 document.metadades.nti.valor.csv=Valor de CSV
 document.metadades.nti.definicio.generacio.csv=Definició de generació de CSV
-document.metadades.nti.identificador.doc.origen=Identificador Nti del document d'origen
+document.metadades.nti.identificador.doc.origen=Identificador NTI del document d'origen
 
 
 expedient.metadades.nti.organisme=Codi DIR3 del organisme associat
@@ -1464,6 +1468,7 @@ tipus.documental.INFORME=Informe
 tipus.documental.SOLICITUD=Sol·licitud
 tipus.documental.DENUNCIA=Denuncia
 tipus.documental.ALEGACIO=Al·legació
+tipus.documental.ALTRES=Altres
 
 tipo.firma.CSV=CSV (Codi segur de verificació)
 tipo.firma.XAdES_ids=XAdES Internally Detached Signature
