#1140: Posar el logo FEDER
Task-Url: https://github.com/GovernIB/helium/issues/1140

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -12,6 +12,11 @@ decorator.menu.administracio=Administració
 decorator.menu.administracio.tasques.execucio=Tasques en execució
 decorator.menu.administracio.monitor.integracio=Monitor integracions
 decorator.menu.administracio.monitor.domini=Monitor dominis
+decorator.logo.govern=Govern de les Illes Balears
+decorator.logo.manera=Una manera de hacer Europa
+decorator.logo.feder=Fondo Europeo de Desarrollo Regional 
+decorator.logo.ue=Unió Europea
+
 
 error.llistat.tipus=Tipus error
 error.llistat.text=Texte error
