#1144 Afegir camp sèrie documental a les metadades nti
https://github.com/GovernIB/helium/issues/1144

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -875,6 +875,7 @@ expedient.tipus.integracio.notificacio.oficiText=Text de l'ofici
 expedient.tipus.metadades.nti.activar=Activar
 expedient.tipus.metadades.nti.organisme=Codi DIR3 del organisme associat
 expedient.tipus.metadades.nti.classificacio=Codi SIA del procediment associat
+expedient.tipus.metadades.nti.serie.documental=Sèrie documental
 expedient.tipus.metadades.nti.tipus.firma=Tipus de firma
 expedient.tipus.metadades.nti.valor.csv=Valor de CSV
 expedient.tipus.metadades.nti.definicio.generacio.csv=Definició de generació de CSV
@@ -887,6 +888,7 @@ expedient.metadades.nti.versio=Versió del NTI
 expedient.metadades.nti.identificador=Identificador Nti
 expedient.metadades.nti.data.apertura=Data apertura
 expedient.metadades.nti.classificacio=Codi SIA del procediment associat
+expedient.metadades.nti.serie.documental=Codi de la sèrie documental
 expedient.metadades.nti.estat=Estat de l'expedient
 expedient.metadades.nti.estat.inicialitzat=Inicialitzat
 expedient.metadades.nti.estat.finalitzat=Finalitzat
@@ -905,6 +907,7 @@ document.metadades.nti.nom.format=Format
 document.metadades.nti.tipus.documental=Tipus documental
 document.metadades.nti.data.captura=Data de captura
 document.metadades.nti.tipus.firma=Tipus de firma
+document.metadades.nti.serie.documental=Seriè documental
 document.metadades.nti.valor.csv=Valor de CSV
 document.metadades.nti.definicio.generacio.csv=Definició de generació de CSV
 document.metadades.nti.identificador.doc.origen=Identificador NTI del document d'origen
