#1146: Generació d'informes de consultes complexes asíncronament
Task-Url: https://github.com/GovernIB/helium/issues/1146

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -257,6 +257,8 @@ error.ordre.enumeracio=No s''ha pogut modificar l'ordre
 
 error.consulta.informe.nonhiha=Aquesta consulta no té configurat cap informe
 error.consulta.informe.expedients.nonhiha=No s'ha trobat cap expedient per generar l'informe
+error.consulta.informe.generacio=Error iniciant la generació del report per la consulta "{0}" : {1}
+error.consulta.informe.cancelacio=Error cancel·lant la generació del report: {0}
 error.consulta.informe.nofiltre=Seleccioni primer una consulta
 error.consulta.tipexp.noaut=No està autoritzat per a consultar aquest tipus d''expedient
 error.ordre.consulta=No s''ha pogut modificar l'ordre
