--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -137,6 +137,16 @@ expedient.tramitacio.massiva.header.ok=Ok
 expedient.tramitacio.massiva.error.desconegut=[Error desconegut]
 
 expedient.informe.canviar=Canviar consulta
+expedient.informe.generacio=Generació de l'informe
+expedient.informe.generacio.estat=Estat
+expedient.informe.generacio.cancellar.confirmacio=Esteu segur que voleu cancel·lar la generació de l'informe?
+expedient.informe.estat.NO_TROBAT=Sense informació
+expedient.informe.estat.INICIALITZANT=Inicialitzant...
+expedient.informe.estat.GENERANT=Generant el report...
+expedient.informe.estat.FINALITZAT=Finalitzat
+expedient.informe.estat.CANCELLAT=Cancel·lat
+expedient.informe.estat.ERROR=Error
+expedient.informe.numero.expedients=Número d'expedients
 
 expedient.info.titol=Informació de l'expedient
 expedient.info.informacio=Informació
