#1146: Generació d'informes de consultes complexes asíncronament
Task-Url: https://github.com/GovernIB/helium/issues/1146

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -139,6 +139,8 @@ expedient.tramitacio.massiva.error.desconegut=[Error desconegut]
 expedient.informe.canviar=Canviar consulta
 expedient.informe.generacio=Generació de l'informe
 expedient.informe.generacio.estat=Estat
+expedient.informe.generacio.consulta=Consulta
+expedient.informe.generacio.cancellar=Cancel·lar la generació de l'informe
 expedient.informe.generacio.cancellar.confirmacio=Esteu segur que voleu cancel·lar la generació de l'informe?
 expedient.informe.estat.NO_TROBAT=Sense informació
 expedient.informe.estat.INICIALITZANT=Inicialitzant...
