#1143: Error important consultes, s'han d'importar les definicions de procés
Task-Url: https://github.com/GovernIB/helium/issues/1143

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -410,7 +410,8 @@ exportar.validacio.variable.seleccio.domini.entorn=La variable de tipus selecció
 exportar.validacio.variable.seleccio.domini.tipexp=La variable de tipus selecció "{0}" necessita el domini "{1}" a nivell de tipus d''''expedient
 exportar.validacio.variable.seleccio.consulta=La variable de tipus selecció "{0}" necessita la consulta "{1}"
 exportar.validacio.consulta.variable=La consulta "{0}" necessita la variable "{1}"
-exportar.validacio.consulta.variable.definicioProces=La consulta "{0}" necessita la variable "{1}" de la definició de procés "{2} v.{3}"
+exportar.validacio.consulta.variable.definicioProces.versio=La consulta "{0}" necessita la variable "{1}" de la definició de procés "{2} v.{3}"
+exportar.validacio.consulta.variable.definicioProces=La consulta "{0}" necessita la variable "{1}" de la definició de procés "{2}"
 exportar.validacio.document.variable=El document "{0}" necessita la variable "{1}" pel camp de la data
 exportar.validacio.tasca.variable=La tasca "{0}" necessita la variable "{1}"
 exportar.validacio.tasca.variable.expedientTipus=La tasca "{0}" necessita la variable "{1}" definida dins del tipus d''expedient
