#1150: Error de permisos modificant permisos de tipus d'expedients
Task-Url: https://github.com/GovernIB/helium/issues/1150

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -54,6 +54,7 @@ entorn.permis.form.camp.principal=Principal
 
 entorn.controller.creat=L'entorn s'ha creat correctament
 entorn.controller.modificat=L'entorn s'ha modificat correctament
+entorn.controller.esborrat=L'entorn s'ha esborrat correctament
 entorn.controller.permis.actualitzat=S'ha actualitzat el permis per a l'entorn
 
 alerta.llistat.marcar_com_llegida=Marcar llegida
