#1151: Error. Un usuari admin d'entorn no pot donar permisos sobre TE
Task-Url: https://github.com/GovernIB/helium/issues/1151

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -469,6 +469,9 @@ expedient.tipus.controller.modificat=El tipus d'expedient s'ha modificat correct
 expedient.tipus.controller.eliminat=El tipus d'expedient s'ha elimitat correctament
 expedient.tipus.controller.eliminar.expedients.relacionats=Hi ha expedients iniciats amb aquest tipus
 expedient.tipus.controller.permis.actualitzat=S'ha actualitzat el permis per al tipus d'expedient
+expedient.tipus.controller.permis.esborrat=S'ha esborrat el permis per al tipus d'expedient
+expedient.tipus.controller.permis.actualitzar.error=Hi ha hagut un error actualitzant el permís: {0}
+expedient.tipus.controller.permis.esborrar.error=Hi ha hagut un error esborrant el permís: {0}
 
 expedient.tipus.camp.llistat.columna.ordre=Ordre
 expedient.tipus.camp.llistat.columna.codi=Codi
