#1161: Herència TE. Sobreescriptura definicions de procés
Task-Url: https://github.com/GovernIB/helium/issues/1161

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1109,6 +1109,7 @@ definicio.proces.llistat.confirmacio.esborrar=Estau segur que voleu esborrar la 
 
 definicio.proces.pipelles.titol=Definició de procés
 definicio.proces.pipelles.definicio.proces.actual=Definició de procés actual
+definicio.proces.pipelles.definicio.no.trobada=No s''ha trobat cap definició de procés amb el codi "{0}"
 definicio.proces.pipelles.pipella.detalls=Detalls
 definicio.proces.pipelles.pipella.tasques=Tasques
 definicio.proces.pipelles.pipella.variables=Variables
