#1164 Integració amb Notib

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -374,6 +374,7 @@ expedient.tipus.pipelles.pipella.enumeracions=Enumeracions
 expedient.tipus.pipelles.pipella.integracio.sistra=Integració SISTRA
 expedient.tipus.pipelles.pipella.integracio.forms=Integració forms
 expedient.tipus.pipelles.pipella.integracio.arxiu=Metadades NTI i arxiu
+expedient.tipus.pipelles.pipella.integracio.notib=Integració amb NOTIB
 
 expedient.tipus.info.camp.codi=Codi
 expedient.tipus.info.camp.titol=Títol
@@ -955,6 +956,7 @@ expedient.tipus.integracio.tramits.variables=Variables
 expedient.tipus.integracio.tramits.documents=Documents
 expedient.tipus.integracio.tramits.adjunts=Adunts
 expedient.tipus.integracio.tramits.tramitCodi=Identificador del tràmit
+expedient.tipus.integracio.tramits.notificacions.activar=Activar notificacions
 
 expedient.tipus.integracio.notificacio.organCodi=Codi d'òrgan
 expedient.tipus.integracio.notificacio.oficinaCodi=Codi d'oficina
@@ -965,6 +967,19 @@ expedient.tipus.integracio.notificacio.avisText=Text d'avís
 expedient.tipus.integracio.notificacio.avisSmsText=Text SMS d'avís
 expedient.tipus.integracio.notificacio.oficiTitol=Títol de l'ofici
 expedient.tipus.integracio.notificacio.oficiText=Text de l'ofici
+
+expedient.tipus.integracio.notib.organisme.emisor=Codi DIR3 de l'organisme emisor
+expedient.tipus.integracio.notib.sia.codiprocediment=Codi procediment SIA
+expedient.tipus.integracio.notib.exp.unitatorganitzativa=Seu unitat organitzativa
+expedient.tipus.integracio.notib.reg.oficina=Seu registre oficina
+expedient.tipus.integracio.notib.reg.llibre=Seu registre llibre
+expedient.tipus.integracio.notib.reg.organ=Seu registre organ
+expedient.tipus.integracio.notib.idioma=Idioma
+expedient.tipus.integracio.notib.avis.titol=Seu avís títol
+expedient.tipus.integracio.notib.avis.text=Seu avís text
+expedient.tipus.integracio.notib.avis.textmobil=Seu avís text per Mòbil
+expedient.tipus.integracio.notib.ofici.titol=Seu ofici títol
+expedient.tipus.integracio.notib.ofici.text=Seu ofici text
 
 expedient.tipus.metadades.nti.actiu=Metadades NTI activades
 expedient.tipus.metadades.nti.organo=Codi DIR3 de l'òrgan associat
