#1164 Integració amb Notib

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -711,6 +711,7 @@ expedient.tipus.definicioProces.incorporar.accio.incorporar=Incorporar informaci
 expedient.tipus.document.llistat.columna.codi=Codi
 expedient.tipus.document.llistat.columna.nom=Nom
 expedient.tipus.document.llistat.columna.plantilla=És plantilla?
+expedient.tipus.document.llistat.columna.notificable=Notificable
 expedient.tipus.document.llistat.columna.arxiu=Arxiu
 expedient.tipus.document.llistat.accio.nova=Nou document
 expedient.tipus.document.llistat.accio.esborrar.error=S'ha produït un error al intentar esborrar el document del tipus d'expedient
@@ -723,6 +724,7 @@ expedient.tipus.document.form.camp.codi=Codi
 expedient.tipus.document.form.camp.nom=Nom
 expedient.tipus.document.form.camp.descripcio=Descripcio
 expedient.tipus.document.form.camp.plantilla=És plantilla?
+expedient.tipus.document.form.camp.notificable=Notificable
 expedient.tipus.document.form.camp.arxiu=Arxiu
 expedient.tipus.document.form.camp.codi_doc=Codi del document pel portasignatures
 expedient.tipus.document.form.camp.adj_auto=Adjuntar automàticament al generar
@@ -980,6 +982,9 @@ expedient.tipus.integracio.notib.avis.text=Seu avís text
 expedient.tipus.integracio.notib.avis.textmobil=Seu avís text per Mòbil
 expedient.tipus.integracio.notib.ofici.titol=Seu ofici títol
 expedient.tipus.integracio.notib.ofici.text=Seu ofici text
+
+expedient.tipus.integracio.notib.controller.guardat=Els canvis s'han guardat correctament
+expedient.tipus.integracio.notib.validacio=Errors de validació
 
 expedient.tipus.metadades.nti.actiu=Metadades NTI activades
 expedient.tipus.metadades.nti.organo=Codi DIR3 de l'òrgan associat
@@ -1609,6 +1614,9 @@ nti.tipo.firma.PADES=PAdES
 nti.tipo.firma.SMIME=S-MIME
 nti.tipo.firma.ODT=PDT
 nti.tipo.firma.OOXML=OOXML
+
+seu.idioma.CA=Català
+seu.idioma.ES=Espanyol
 
 variable.helper.error.recuperant.valor=Error convertint el valor a variable tipus {0} {1}
 
