#1178: Afegir opcions d'exportacio
Task-Url: https://github.com/GovernIB/helium/issues/1178

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -832,8 +832,11 @@ expedient.tipus.enumeracio.valors.importar.arxiu=Seleccionau arxiu
 expedient.tipus.enumeracio.valors.importar.arxiu.buid=Heu de seleccionar un arxiu del qual importar les dades.
 expedient.tipus.enumeracio.valors.importats=Els valor s'han importat correctament.
 expedient.tipus.enumeracio.valors.importats.error=S'ha produït un error durant la'importació dels valors.
-## FI MANTENIMENT DE ENUMERACIONS A TIPUS DE EXPEDIENT ##
 
+expedient.tipus.enumeracio.valors.exportats=Els valor s'han exportat correctament.
+expedient.tipus.enumeracio.valors.exportats.error=S'ha produït un error durant l'exportació dels valors.
+
+## FI MANTENIMENT DE ENUMERACIONS A TIPUS DE EXPEDIENT ##
 expedient.tipus.termini.form.titol.nou=Nou termini
 expedient.tipus.termini.form.titol.modificar=Modificar termini
 expedient.tipus.termini.controller.creat=Termini creat correctament
@@ -936,6 +939,9 @@ expedient.tipus.estat.importar.controller.validacio.multipartFile.buit=L'arxiu a
 expedient.tipus.estat.importar.controller.success=Importació finalitzada amb {0} insercions i {1} actualitzacions
 expedient.tipus.estat.importar.controller.error=Error durant la importació de dades: {0}
 expedient.tipus.estat.importar.controller.error.codi=No s''ha pogut importar l''estat "{0}". El codi no pot començar per majúscula i minúscula ni contenir espais o punts.
+
+expedient.tipus.estat.exportar.controller.success=Exportació finalitzada correctament
+expedient.tipus.estat.importar.controller.error=Error durant la exportació de dades: {0}
 
 expedient.tipus.integracio.forms.activar=Activar
 expedient.tipus.integracio.forms.url=Url del servei d'integració amb formularis externs
@@ -1401,6 +1407,7 @@ comu.boto.modificar=Modificar
 comu.boto.esborrar=Esborrar
 comu.boto.tornar=Tornar
 comu.boto.importar.dades=Importar dades
+comu.boto.exportar.dades=Exportar dades
 comu.tots=Tots
 comu.totes=Totes
 comu.arxiu=Arxiu
