#1164 Integració amb Notib

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -144,7 +144,7 @@ expedient.termini.data.fi=Data de fi
 
 expedient.notificacio=Notificació
 expedient.notificacio.expedient=Notificació de l'expedient
-expedient.notificacio.error=Error de la notificacio 
+expedient.notificacio.error=Error 
 expedient.notificacio.unitat_administrativa=Unitat Administrativa
 expedient.notificacio.organ_codi=Òrgan codi
 expedient.notificacio.oficina_codi=Oficina codi
@@ -161,6 +161,7 @@ expedient.notificacio.assumpte=Assumpte
 expedient.notificacio.estat=Estat
 expedient.notificacio.interessat=Interessat
 expedient.notificacio.document=Document
+expedient.notificacio.justificant=Justificant
 expedient.notificacio.info=Informació notificació
 expedient.notificacio.descarregar.doc=Descarregar document
 expedient.notificacio.interessat.document_num=Número document
@@ -175,9 +176,15 @@ expedient.notificacio.estat.enviat=ENVIAT
 expedient.notificacio.estat.processat_ok=PROCESSAT
 expedient.notificacio.estat.processat_rebutjat=REBUTJAT
 expedient.notificacio.estat.processat_error=ERROR PROCESSANT
+expedient.notificacio.estat.pendent=PENDENT
+expedient.notificacio.estat.rebutjat=REBUTJAT
+expedient.notificacio.estat.cancelat=CANCEL.LAT
 expedient.notificacio.mostrar_error=Mostrar error
 expedient.notificacio.tornar_processar=Tornar a processar
 expedient.notificacio.reprocessada=S'ha tornat a demanar el justificant
+expedient.notificacio.concepte=Concepte
+expedient.notificacio.titular=Titular
+expedient.notificacio.destinatari=Representant
 
 expedient.eines.confirm_aturar=Estau segur que voleu donar aquesta tasca per finalitzada?
 expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
