--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -973,6 +973,7 @@ expedient.tipus.integracio.notificacio.oficiText=Text de l'ofici
 expedient.tipus.integracio.notib.organisme.emisor=Codi DIR3 de l'organisme emisor
 expedient.tipus.integracio.notib.sia.codiprocediment=Codi procediment SIA
 expedient.tipus.integracio.notib.exp.unitatorganitzativa=Seu unitat organitzativa
+expedient.tipus.integracio.notib.sistra.codiprocediment=Codi procediment SEU
 expedient.tipus.integracio.notib.reg.oficina=Seu registre oficina
 expedient.tipus.integracio.notib.reg.llibre=Seu registre llibre
 expedient.tipus.integracio.notib.reg.organ=Seu registre organ
