#1080: Sobreescriure informació tasques herència de tipus d'expedients
Task-Url: https://github.com/GovernIB/helium/issues/1080

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -363,6 +363,7 @@ expedient.tipus.pipelles.titol=Tipus d'expedient
 expedient.tipus.pipelles.pipella.informacio=Informació
 expedient.tipus.pipelles.pipella.variables=Variables
 expedient.tipus.pipelles.pipella.documents=Documents
+expedient.tipus.pipelles.pipella.tasques=Tasques
 expedient.tipus.pipelles.pipella.definicions.proces=Definicions de procés
 expedient.tipus.pipelles.pipella.estats=Estats
 expedient.tipus.pipelles.pipella.terminis=Terminis
@@ -771,6 +772,9 @@ expedient.tipus.document.form.camp.nti.tipo.documental.comentari=Si no s'especif
 expedient.tipus.document.controller.creat=El document s'ha creat correctament
 expedient.tipus.document.controller.modificat=El document s'ha modificat correctament
 expedient.tipus.document.controller.eliminat=El document s'ha eliminat correctament
+
+# Manteniment de tasques des del disseny del tipus d'expedient
+expedient.tipus.tasca.llistat.definicio.seleccionada=Definició de procés seleccionada
 
 # Manteniment d'accions del tipus d'expedient
 expedient.tipus.accio.llistat.columna.codi=Codi
