#1080: Sobreescriure informació tasques herència tipus expedients
Task-Url: https://github.com/GovernIB/helium/issues/1080

Modificacions per tal de poder incloure noves variables a les tasques de
les definicions de procés heretades

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -453,6 +453,8 @@ expedient.tipus.exportar.form.terminis=Terminis
 expedient.tipus.exportar.form.accions=Accions
 expedient.tipus.exportar.form.dominis=Dominis
 expedient.tipus.exportar.form.consultes=Consultes
+expedient.tipus.exportar.form.herencia=Dades heretades del tipus d''expedient pare {0}
+expedient.tipus.exportar.form.herencia.tasques=Variables, documents i signatures
 
 expedient.tipus.exportar.form.camp.codi=Codi
 expedient.tipus.exportar.form.camp.titol=Títol
@@ -517,6 +519,8 @@ exportar.validacio.definicio.variable.seleccio.domini.tipexp=La variable de tipu
 exportar.validacio.definicio.tasca.variable.tipexp=La tasca "{0}" de la definició de procés "{1}" necessita la variable "{2}" a nivell de tipus d''''expedient
 exportar.validacio.definicio.tasca.document.tipexp=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}" a nivell de tipus d''''expedient
 exportar.validacio.definicio.tasca.signatura.tipexp=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}" per a la signatura a nivell de tipus d''''expedient
+
+exportar.validacio.herencia.tasca.definicio.no.trobada=La importació de dades de tasques heretades precisa la definició de procés "{0}" per associar camps, documents o firmes
 
 expedient.tipus.importar.form.titol.nou=Importació d'un nou tipus d'expedient
 expedient.tipus.importar.form.titol.modificar=Importació d''un tipus d''expedient sobre el tipus d''expedient "{0} - {1}"
@@ -774,7 +778,13 @@ expedient.tipus.document.controller.modificat=El document s'ha modificat correct
 expedient.tipus.document.controller.eliminat=El document s'ha eliminat correctament
 
 # Manteniment de tasques des del disseny del tipus d'expedient
-expedient.tipus.tasca.llistat.definicio.seleccionada=Definició de procés seleccionada
+expedient.tipus.tasca.llistat.definicio.seleccionada=Definició de procés
+expedient.tipus.tasca.llistat.versio.seleccionada=Versió
+expedient.tipus.tasca.llistat.codi.heretat=Tasca heretada del tipus d'expedient pare
+expedient.tipus.tasca.llistat.codi.sobreescriu=Tasca que sobreescriu una del tipus d'expedient pare
+
+expedient.tipus.tasca.controller.moure.heretat.error=No es pot modificar l'ordre d'un camp de tasca heretat
+expedient.tipus.tasca.controller.moure.heretat.error=No es pot modificar l'ordre d'un camp de tasca heretat
 
 # Manteniment d'accions del tipus d'expedient
 expedient.tipus.accio.llistat.columna.codi=Codi
@@ -1192,6 +1202,7 @@ definicio.proces.tasca.llistat.accio.documents=Documents
 definicio.proces.tasca.llistat.accio.signatures=Signatures
 
 definicio.proces.tasca.form.titol.modificar=Modificar la tasca
+definicio.proces.tasca.form.titol.visualitzar=Visualitzar la tasca
 definicio.proces.tasca.form.jbpmName=Codi
 definicio.proces.tasca.form.nom=Títol
 definicio.proces.tasca.form.missatgeInfo=Missatge d'informació
