#1203: Firmar documents al finalitzar expedient
Task-Url: https://github.com/GovernIB/helium/issues/1203

NOVA RELEASE: 3.2.95

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -145,6 +145,7 @@ error.permisos.modificar.expedient=No té permisos per modificar aquest expedient
 error.permisos.anular.expedient=No té permisos per anul·lar aquest expedient
 error.permisos.script.expedient=No té permisos per executar scrits sobre aquest expedient
 error.permisos.buidar.logs=No té permisos per buidar la informació del registre
+error.permisos.migrar.expedient.arxiu=No té permisos per migrar l'expedient a l'arxiu
 
 error.esborrar.dada.proces=No s'ha pogut esborrar la dada del procés
 error.esborrar.dada.tasca=No s'ha pogut esborrar la dada de la tasca
@@ -352,6 +353,7 @@ error.no.exp.execmasiv=No s'ha trobat cap expedient que es pugui executar massiv
 
 error.reindexar.expedient=Error al reindexar expedient
 error.buidarlog.expedient=Error al eliminar la informació de registre de l'expedient
+error.migrar.expedient.arxiu=Error al migrar l'expedient a l'arxiu
 error.reprendre.expedient=Error al reprendre l'expedient
 
 error.no.massiu=Error al programar les accions massives
