--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -193,7 +193,9 @@ expedient.eines.confirm_buidarlog_expedients=Estau segur que voleu eliminar la i
 expedient.eines.confirm_reprendre_expedient=Estau segur que voleu desfer la finalització de l'expedient?
 expedient.eines.confirm_reprendre_expedients=Estau segur que voleu desfer la finalització del(s) expedient(s)?
 expedient.eines.confirm_finalitzar_expedient=Estau segur que voleu finalitzar l'expedient?
+expedient.eines.confirm_migrar_expedient=Estau segur que voleu migrar l'expedient a l'arxiu?
 expedient.eines.confirm_finalitzar_expedients=Estau segur que voleu finalitzar el(s) expedient(s)?
+expedient.eines.confirm_migrar_expedients=Estau segur que voleu migrar el(s) expedient(s) a l'arxiu?
 expedient.eines.confirm_reassignar_expedients=Estau segur que voleu reassignar la(es) tasca(ques)?
 expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
 expedient.eines.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquest procés?
@@ -209,6 +211,8 @@ expedient.eines.reprendre_expedient=Desfer finalització de l'expedient
 expedient.eines.reprendre_expedients=Desfer finalització dels expedients
 expedient.eines.finalitzar_expedient=Finalitzar expedient
 expedient.eines.finalitzar_expedients=Finalitzar expedients
+expedient.eines.migrar_expedient=Migrar expedient a l'arxiu
+expedient.eines.migrar_expedients=Migrar expedients a l'arxiu
 expedient.eines.buidarlog.expedients=Eliminar la informació de registre dels expedients
 expedient.eines.reassignar.expedients=Reassignar tasca
 expedient.eines.propagar.plantilles=Propagar plantilles ({0})
@@ -296,6 +300,7 @@ expedient.log.accio.PROCES_DOCUMENT_SIGNAR=Procesar document del portasignatures
 expedient.log.accio.EXPEDIENT_RETROCEDIR_TASQUES=Retrocedir tasques de l'expedient
 expedient.log.accio.EXPEDIENT_DESFINALITZAR=Desfinalitzar expedient
 expedient.log.accio.EXPEDIENT_FINALITZAR=Finalitzar expedient
+expedient.log.accio.EXPEDIENT_MIGRAR_ARXIU=Migrar expedient a l'arxiu
 expedient.log.objecte=Element
 expedient.log.objecte.TASCA=Tasca
 expedient.log.objecte.PROCES=Procés
@@ -583,6 +588,7 @@ info.dada.creat=La dada s'ha creat correctament
 info.expedient.reindexat=L'expedient s&#39;ha reindexat correctament
 info.expedient.finalitzat=L'expedient s&#39;ha finalitzat correctament
 info.expedient.buidatlog=La informació de registre de l'expedient s'ha eliminat correctament
+info.expedient.migrat.arxiu=L'expedient s'ha migrat correctament a l'arxiu
 info.expedient.reprendre=L'expedient s'ha reprès correctament
 info.expedient.canviversio=S'ha canviat la versió de l'expedient correctament
 info.reindexar.executat=La reindexació s&#39;ha realitzat correctament
