--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -180,6 +180,7 @@ expedient.info.accio.script=Executar script
 expedient.info.accio.executar=Executar
 expedient.info.accio.reindexa=Reindexar l'expedient
 expedient.info.accio.buidarlog=Eliminar informació registre
+expedient.info.accio.migrararxiu=Migrar a arxiu
 expedient.info.pipella.tasques=Tasques
 expedient.info.pipella.tokens=Tokens
 expedient.info.pipella.accions=Accions
@@ -1021,6 +1022,7 @@ expedient.accio.script.boto.executar=Executar
 expedient.accio.modificar.titol=Modificar informació de l'expedient
 expedient.accio.modificar.boto.modificar=Modificar
 expedient.accio.buidarlog.confirmacio=Estau segur que voleu eliminar la informació de registre de l'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
+expedient.accio.migrararxiu.confirmacio=Estau segur que voleu migrar la informació de l'expedient i dels seus documents?
 expedient.accio.nom=Nombre
 
 expedient.tipus.consulta.llistat.columna.ordre=Ordre
@@ -1529,6 +1531,7 @@ document.controller.firma.passarela.final.error=La firma del document ha produit
 document.controller.firma.passarela.final.error.validacio=La firma del document ha produit un error al validar i custodiar: 
 document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
 document.controller.firma.passarela.final.desconegut=La firma del document ha finalitzat amb estat desconegut
+document.controller.firma.servidor.default.message=Firma per migració d'expedient finalitzat
 
 nti.expedient.estat.OBERT=Obert
 nti.expedient.estat.TANCAT=Tancat
