#1214: Error pdf header finalitzant expedient amb documents .odt sense signar
Task-Url: #1214

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -257,6 +257,8 @@ expedient.metadades.nti.camp.firma.tipus=Tipus
 expedient.metadades.nti.camp.firma.perfil=Perfil
 expedient.metadades.nti.camp.firma.contingut=Contingut
 
+expedient.error.finalitzant.expedient=Error finalitzant l'expedient
+
 document.metadades.nti.titol.nti=Metadades NTI
 document.metadades.nti.titol.arxiu=Metadades NTI i informació de l'arxiu
 document.metadades.nti.version=Versió
