#1221: Signar documents PAdES en finalitzar expedient
Task-Url: #1221

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1534,6 +1534,7 @@ document.controller.firma.passarela.final.error.validacio=La firma del document 
 document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
 document.controller.firma.passarela.final.desconegut=La firma del document ha finalitzat amb estat desconegut
 document.controller.firma.servidor.default.message=Firma per migració d'expedient finalitzat
+document.controller.firma.servidor.validacio.conversio.documents=Els següents documents no es poden convertir a PDF per firmar en el servidor per la finalització de l''expedient: {0}. Els tipus d''arxiu permesos són: {1}
 
 nti.expedient.estat.OBERT=Obert
 nti.expedient.estat.TANCAT=Tancat
