--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -270,6 +270,7 @@ document.metadades.nti.estado.elaboracion=Estat d'elaboració
 document.metadades.nti.nombre.formato=Format
 document.metadades.nti.tipo.documental=Tipus documental
 document.metadades.nti.iddoc.origen=Identificador del document d'origen
+document.metadades.nti.iddoc.origen.validacio.copia=Aquest camp és obligatori si l'estat d'elaboració és de tipus còpia
 document.metadades.nti.tipo.firma=Tipus de firma
 document.metadades.nti.csv=CSV
 document.metadades.nti.defgen.csv=Normativa de generació del CSV
