#1205: Estadístiques per entorn
Task-Url: #1205

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -475,6 +475,13 @@ expedient.tipus.exportar.form.camp.seleccionarAny=Permetre seleccionar any d'ini
 expedient.tipus.exportar.form.camp.ambRetroaccio=Amb retroacció
 expedient.tipus.exportar.form.camp.reindexacioAsincrona=Reindexació asíncrona
 
+expedient.tipus.estadistica.titol = Estadística per tipus d'expedient
+
+expedient.tipus.taula.estadistica.totalany = Total per any
+expedient.tipus.taula.estadistica.totaltipus = Total tipus
+expedient.tipus.taula.estadistica.titol.nom = Tipus d'expedient
+expedient.tipus.taula.estadistica.titol.codi = Codi
+
 # Literals comuns per a la importació i exportació de tipus d'expedients i definicions de processos
 exportar.validacio=Errors de validació
 exportar.validacio.expedientTipusIdNull=El tipus d'expedient a exportar no pot estar buit
@@ -1394,6 +1401,7 @@ enum.tasca.etiqueta.execucio=En execució des del
 enum.si=Sí
 enum.no=No
 enum.si.only=Només anul·lats
+enum.null =  
 
 comu.estat.iniciat=Iniciat
 comu.estat.finalitzat=Finalitzat
