--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1045,7 +1045,7 @@ decorators.superior.entorns=Entorns
 decorators.superior.festius=Festius
 decorators.superior.reassignacions=Reassignacions
 decorators.superior.parametres=Paràmetres aplicació
-decorators.superior.estadistica=Estadística entorn
+decorators.superior.estadistica=Estadístiques
 
 defproc.accform.selec_hand=Seleccioni un handler
 defproc.accform.handler=Handler
