#1205: Estadístiques per entorn
Correcció permisos accés a la pàgina

Task-Url: #1205

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -24,6 +24,7 @@ error.tipus.integracions=Errors d'Integracions
 error.tipus.basic.no=Sense errors bàsics
 error.tipus.integracions.no=Sense errors d'integracions
 error.permis.disseny.entorn=No disposa de permisos per dissenyar l'entorn
+error.permis.administracio.entorn=No disposa de permisos per administrar l'entorn
 error.signatura=Error durant la signatura: {0}
 
 entorn.llistat.titol=Entorns
